Add log element as sibling next to button

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         margin: 0 auto;
         padding: 12px;
       }
-      esp-web-flash-button {
-        display: inline-block;
-        margin-bottom: 8px;
+      esp-web-flash-log {
+        margin-top: 8px;
       }
       a {
         color: #03a9f4;
@@ -39,7 +38,7 @@
         browser.
       </p>
       <p>
-        To flash the ESPHome firmware, connect an ESP to your computer and hit
+        To install the ESPHome firmware, connect an ESP to your computer and hit
         the button:
       </p>
       <esp-web-install-button
