Implement erase-first

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         your computer and hit the button:
       </p>
       <esp-web-install-button
+        erase-first
         manifest="firmware_build/manifest.json"
       ></esp-web-install-button>
       <p>
