Mention downloading files

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
         your website. Make sure you update the manifest attribute to point at
         your manifest.
       </p>
+      <p>
+        You can import ESP Web Tools directly from the unpkg CDN or
+        <a href="https://unpkg.com/browse/esp-web-tools/dist/web/"
+          >download the files</a
+        >
+        and put them on your website.
+      </p>
       <pre>
 &lt;script
   type="module"
