Fix urls for in prod

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </p>
       <esp-web-install-button
         erase-first
-        manifest="/static/firmware_build/manifest.json"
+        manifest="static/firmware_build/manifest.json"
       ></esp-web-install-button>
       <p>
         <i>
@@ -120,7 +120,7 @@
       <h2>Projects using ESP Web Tools</h2>
       <div class="project">
         <div class="logo">
-          <img src="/static/wled.png" alt="WLED logo" />
+          <img src="static/wled.png" alt="WLED logo" />
         </div>
         <h3>WLED</h3>
         <p>
@@ -154,7 +154,7 @@
 >&lt;/script>
 
 &lt;esp-web-install-button
-  manifest="/static/firmware_build/manifest.json"
+  manifest="static/firmware_build/manifest.json"
 >&lt;/esp-web-install-button></pre
       >
       <p>
@@ -242,7 +242,7 @@
       </p>
       <pre>
 &lt;esp-web-install-button
-  manifest="/static/firmware_build/manifest.json"
+  manifest="static/firmware_build/manifest.json"
   erase-first
 >
   &lt;button slot="activate">Custom install button&lt;/button>
