--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <i>
           Note, this only works in desktop Chrome and Edge. Android support
           should be possible but has not been implemented yet. If you don't see
-          your ESP device, you need <a href="#drivers">drivers</a>.
+          your ESP device, you might miss <a href="#drivers">drivers</a>.
         </i>
       </p>
       <p>
