Add ids to headers

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           allowfullscreen
         ></iframe>
       </div>
-      <h2>Projects using ESP Web Tools</h2>
+      <h2 id='used-by'>Projects using ESP Web Tools</h2>
       <div class="project">
         <div class="logo">
           <img src="static/wled.png" alt="WLED logo" />
@@ -139,7 +139,7 @@
           >
         </p>
       </div>
-      <h2>Adding ESP Web Tools to your website</h2>
+      <h2 id='add-website'>Adding ESP Web Tools to your website</h2>
       <p>
         To add this to your own website, create a manifest and add the button to
         your website. Make sure you update the manifest attribute to point at
@@ -239,7 +239,7 @@
         ></iframe>
       </div>
 
-      <h3>Customizing the look and feel</h3>
+      <h3 id='customize'>Customizing the look and feel</h3>
       <p>
         There are multiple options to change the look and feel of the button and
         other elements.
