--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <iframe
           width="560"
           height="315"
-          src="https://www.youtube-nocookie.com/embed/jGfa0xMhUn4"
+          src="https://www.youtube-nocookie.com/embed/R0UlPuNuJhI"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
