--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <iframe
           width="560"
           height="315"
-          src="https://www.youtube-nocookie.com/embed/R0UlPuNuJhI"
+          src="https://www.youtube-nocookie.com/embed/k88BS8zgWq0"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -231,7 +231,7 @@
         <iframe
           width="560"
           height="315"
-          src="https://www.youtube-nocookie.com/embed/R0UlPuNuJhI?start=183"
+          src="https://www.youtube-nocookie.com/embed/k88BS8zgWq0?start=33"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
