Correct spelling of "Wi-Fi"
Confirmed by Paulus that this is the official spelling.

--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
       </p>
       <p>
         Each build also allows you to specify if it supports
-        <a href="https://www.improv-wifi.com">the Improv WiFi standard</a>. If
-        it does, the user will be offered to configure the WiFi after
+        <a href="https://www.improv-wifi.com">the Improv Wi-Fi standard</a>. If
+        it does, the user will be offered to configure the Wi-Fi after
         installation is done as can be seen in the video below.
       </p>
       <div class="videoWrapper">
@@ -285,7 +285,7 @@
       <h4>Replace the button and message with a custom one</h4>
       <p>
         You can replace both the activation button and the message that is shown
-        when the user uses an unsupported browser or non secure context with
+        when the user uses an unsupported browser or non-secure context with
         your own elements. This can be done using the <code>activate</code>,
         <code>unsupported</code> and <code>not-allowed</code> slots:
       </p>
