Add note regarding browser page visibility to the index.html

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
         </i>
       </p>
       <p>
+        <i>
+          To prevent slow down or halting of the installation process, please keep this page visible.
+        </i>
+      </p>
+      <p>
         This works by combining
         <a
           href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Serial_API"
