--- a/index.html
+++ b/index.html
@@ -123,11 +123,9 @@
       </div>
       <h2 id="used-by">Projects using ESP Web Tools</h2>
       <div class="project">
-        <div class="logo">
-          <a href="https://wled.me"
-            ><img src="static/logos/wled.png" alt="WLED logo"
-          /></a>
-        </div>
+        <a href="https://wled.me" class="logo"
+          ><img src="static/logos/wled.png" alt="WLED logo"
+        /></a>
         <h3>WLED</h3>
         <p>
           A fast and feature-rich implementation of an ESP8266/ESP32 firmware to
@@ -141,11 +139,9 @@
         </p>
       </div>
       <div class="project">
-        <div class="logo">
-          <a href="http://www.espeasy.com/"
-            ><img src="static/logos/espeasy.png" alt="ESPEasy logo"
-          /></a>
-        </div>
+        <a href="http://www.espeasy.com/" class="logo"
+          ><img src="static/logos/espeasy.png" alt="ESPEasy logo"
+        /></a>
         <h3>ESPEasy</h3>
         <p>Easy MultiSensor device based on ESP8266/ESP32.</p>
         <p>
