--- a/index.html
+++ b/index.html
@@ -2,10 +2,36 @@
   <head>
     <meta charset="utf-8" />
     <title>ESP Web Tools</title>
-    <meta name="viewport" content="width=device-width" />
     <meta
       name="description"
       content="Easily allow users to flash new firmware for their ESP-devices on the web."
+    />
+    <meta name="viewport" content="width=device-width" />
+
+    <meta property="og:title" content="ESP Web Tools" />
+    <meta property="og:site_name" content="ESP Web Tools" />
+    <meta
+      property="og:url"
+      content="https://esphome.github.io/esp-web-tools/"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Easily allow users to flash new firmware for their ESP-devices on the web."
+    />
+    <meta
+      property="og:image"
+      content="https://esphome.github.io/esp-web-tools/static/social.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ESP Web Tools" />
+    <meta
+      name="twitter:description"
+      content="Easily allow users to flash new firmware for their ESP-devices on the web."
+    />
+    <meta
+      name="twitter:image"
+      content="https://esphome.github.io/esp-web-tools/static/social.png"
     />
     <style>
       body {
