Upgrade to esp-web-flasher 2.1

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
       </p>
       <esp-web-install-button
         erase-first
+        log-console
         manifest="static/firmware_build/manifest.json"
       ></esp-web-install-button>
       <p>
