Add log-console attribute

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         your computer and hit the button:
       </p>
       <esp-web-install-button
+        log-console
         erase-first
         manifest="static/firmware_build/manifest.json"
       ></esp-web-install-button>
